# fastapi_boilerplate

./: .dockerignore  .env.example  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
core/: auth.py  registry.py
core/api/: __init__.py  auth.py  ping.py
core/api/profile/: __init__.py  id.py
core/model/: profile.py
core/storage/: profile_storage.py
core/storage/db/: schema.sql
